--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <p>Once you try them, your taste buds will get exited everytime you hear <strong>INDIA</strong></p>
     <ul>
         <li><a href="./recipes/butterchicken.html">Butter Chicken</a></li>
+        <li><a href="./recipes/chickenbiryani.html">Chicken Biryani</a></li>
+        <li><a href="./recipes/paneerbuttermasala.html">Paneer Butter Masala</a></li>
     </ul>
 </body>
 </html>
