linked back to top to new recipes

--- a/recipes/chickenbiryani.html
+++ b/recipes/chickenbiryani.html
@@ -77,7 +77,7 @@
             serving dish.</li>
 
     </ol>
-    <a href="./butterchicken.html">Back to top</a>
+    <a href="./chickenbiryani.html">Back to top</a>
 </body>
 
 </html>
