--- a/recipes/paneerbuttermasala.html
+++ b/recipes/paneerbuttermasala.html
@@ -136,7 +136,7 @@
 
         </li>
     </ol>
-    <a href="./butterchicken.html">Back to top</a>
+    <a href="./paneerbuttermasala.html">Back to top</a>
 </body>
 
 </html>
